Fix Component And Popup

--- a/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/Popup/ConfirmationPopup.xaml
+++ b/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/Popup/ConfirmationPopup.xaml
@@ -28,7 +28,7 @@
                    FontSize="Large" TextColor="Black"/>
             <StackLayout Orientation="Horizontal" HeightRequest="50">
                 <local:OrderButton TextButton="Yes" HorizontalOptions="FillAndExpand" Command="{Binding YesCommand}"/>
-                <local:OrderButton TextButton="No" ButtonBackgroundColor="Red"
+                <local:OrderButton TextButton="No" BackgroundButton="Red"
                                    HorizontalOptions="FillAndExpand" Command="{Binding NoCommand}"/>
             </StackLayout>
         </StackLayout>
