--- a/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/RestaurantView.xaml
+++ b/SmartHotel360_client/Source/SmartHotel.Clients/SmartHotel.Clients/Views/RestaurantView.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             x:Name="me"
              xmlns:bd="clr-namespace:SmartHotel.Clients.Core.ViewModels"
              x:Class="SmartHotel.Clients.Core.Views.RestaurantView">
     <ContentPage.BindingContext>
@@ -26,33 +27,38 @@
              
                 
                     <StackLayout Grid.Row="1">
-                  
-                        
-                    <StackLayout BindableLayout.ItemsSource="{Binding CatagoriesList}" Padding="5" BackgroundColor="LightGray">
+                     
+                        <StackLayout BindableLayout.ItemsSource="{Binding CatagoriesList}" Padding="5" BackgroundColor="LightGray">
                         <BindableLayout.ItemTemplate>
                             <DataTemplate>
                                 <Frame BackgroundColor="WhiteSmoke" HasShadow="True" CornerRadius="30">                                   
                                
                                 <StackLayout>
                                             <StackLayout.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding .}"/>
+                                                <TapGestureRecognizer  Command="{Binding  BindingContext.ShowCatagariesCommand,Source={x:Reference me}}" CommandParameter="{Binding CatagoryName}"/>
+                                                <!--<TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>-->
                                             </StackLayout.GestureRecognizers>
-                                <Label Text="{Binding CatagoryName}"  Margin="15,0,15,0" FontSize="30" />
-                                <StackLayout BindableLayout.ItemsSource="{Binding RestaurantMenuItemList}" 
+                                            <Label Text="{Binding CatagoryName}"  Margin="15,0,15,0" FontSize="30" />                                           
+                                            <StackLayout BindableLayout.ItemsSource="{Binding RestaurantMenuItemList}" 
                                              Padding="0" Margin="15, 2, 15, 0" IsVisible="{Binding IsVisble}" >
                                     <BindableLayout.ItemTemplate>
-                                        <DataTemplate>                                               
+                                        <DataTemplate>                                            
                                                     
                                                     <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+                                                                <StackLayout.GestureRecognizers>
+                                                                    <TapGestureRecognizer  Command="{Binding  BindingContext.GoToAddCartCommand, Source={x:Reference me}}"
+                                                                                           CommandParameter="{Binding id}"/>
+                                                                </StackLayout.GestureRecognizers>
+                                                          
                                                         <Image  HeightRequest="90" WidthRequest="90" VerticalOptions="CenterAndExpand" 
                                                                Aspect="AspectFit" Source="{Binding ManuImg}"/>
-                                                        <StackLayout VerticalOptions="CenterAndExpand">
-                                                            <Label   VerticalOptions="CenterAndExpand" FontSize="20"
+                                                            <StackLayout VerticalOptions="CenterAndExpand">
+                                                                <Label   VerticalOptions="CenterAndExpand" FontSize="20"
                                                                Text="{Binding ManuName, Mode=TwoWay}" />
                                                             <Label  Text="{Binding ManuComment, Mode=TwoWay}" VerticalOptions="Start" FontSize="20"  />
                                                         </StackLayout>
                                                         <Label Text="{Binding MunuPrice}" HorizontalOptions="EndAndExpand"  VerticalOptions="Center"/>
-                                                    </StackLayout>
+                                                    </StackLayout>                                                    
                                             
                                          </DataTemplate>
                                     </BindableLayout.ItemTemplate>
